--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -7,8 +7,8 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
-GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
+EditorStartupMap=/Game/Maps/SunTemple.SunTemple
+GameDefaultMap=/Game/Maps/SunTemple.SunTemple
 GlobalDefaultGameMode=/Game/BluePrints/GameMode_BP.GameMode_BP_C
 
 [/Script/Engine.Engine]
